--- a/styles.css
+++ b/styles.css
@@ -72,19 +72,24 @@ nav a:hover {
 }
 
 footer {
-    background-color: #333;
     color: #fff;
-    padding: 15px;
     text-align: center;
+    
 }
 
 footer a {
-    color: #ff5733;
+    color: white;
 }
 
 footer a:hover {
     text-decoration: underline;
 }
+
+footer i.fa {
+    font-size: 50px;
+    margin-right: 15px;
+}
+
 
 body {
     background-color: rgb(33, 6, 79);
