--- a/styles.css
+++ b/styles.css
@@ -13,9 +13,17 @@ header {
     flex-direction: column;
 }
 
+body {
+    background-color: rgb(33, 6, 79);
+}
+
 h1 {
     font-size: 3em;
     letter-spacing: 0.15em;
+}
+
+header :hover {
+    color: #ff5733; 
 }
 
 h2 {
@@ -54,7 +62,9 @@ nav a:hover {
 
 .about {
     padding: 15px;
-    background-color: #f0f0f0;
+    color: white;
+    width: auto;
+    background: rgba(0,0,0,0.8);
 }
 
 .skills {
@@ -62,35 +72,22 @@ nav a:hover {
     color: white;
 }
 
-.projects {
-    margin-top: 20px;
-}
-
-.project {
-    margin-bottom: 20px;
-    color: white;
-}
-
 footer {
     color: #fff;
     text-align: center;
-    
 }
 
 footer a {
     color: white;
+    margin-right: 15px;
 }
 
 footer a:hover {
     text-decoration: underline;
+    color: #ff5733; 
 }
 
 footer i.fa {
     font-size: 50px;
-    margin-right: 15px;
 }
 
-
-body {
-    background-color: rgb(33, 6, 79);
-}
