--- a/styles.css
+++ b/styles.css
@@ -1,96 +1,96 @@
-.project-image-container {
-    position: relative;
-}
+@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css');
 
-header {
-    background: url('https://contentstatic.techgig.com/thumb/msid-81571178,width-460,resizemode-4/How-to-become-a-full-stack-developer-in-2021.jpg') center/cover no-repeat;
-    height: 45vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: #ffffff;
-    text-align: center;
-    flex-direction: column;
+body, h1, h2, p, ul {
+    margin: 0;
+    padding: 0;
 }
 
 body {
-    background-color: rgb(33, 6, 79);
+    position: relative;
 }
 
-h1 {
-    font-size: 3em;
-    letter-spacing: 0.15em;
+img {
+    display: block;
+    width: 100%;
+    height: auto;
+    max-height: 400px;
 }
 
-header :hover {
-    color: #ff5733; 
-}
-
-h2 {
-    color: white;
+header {
+    position: relative;
 }
 
 nav {
     position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    padding: 25px;
-    font-size:3rex;
-    font:bold;
+    top: 20px;
+    right: 20px;
 }
 
 nav ul {
     list-style: none;
-    padding: 0;
-    margin: 0;
     display: flex;
-    justify-content:flex-end;
-    font-size: 1em;
+}
+
+nav li {
+    margin-right: 15px;
 }
 
 nav a {
     text-decoration: none;
     color: white;
-    transition: color 0.3s ease;
-    padding: 5px;
 }
 
-nav a:hover {
-    color: #ff5733; 
-}
-
-.second {
-    padding: 15px;
+h1 {
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     color: white;
-    width: auto;
-    background: rgba(0,0,0,0.8);
+    font-size: 3em;
+    letter-spacing: 0.15em;
 }
 
-.second :hover {
-    color: #ff5733; 
+header :hover {
+    color: #ff5733;
 }
 
-.skills {
-    margin-top: 20px;
+#holder {
+    position:absolute;
+    top: 70%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     color: white;
+}
+
+#holder:hover {
+    color:#ff5733
+}
+
+.blinking-cursor {
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 10px;
 }
 
 footer {
-    color: #fff;
+    padding: 15px;
     text-align: center;
+    margin-top: auto;
+    position: fixed;
+    bottom:0;
+    width: 100%;
+    height: auto;
 }
 
 footer a {
-    color: white;
-    margin-right: 15px;
+    color: black;
+    text-decoration: none;
+    margin: 0 15px;
+    font-size: 200%;
 }
 
 footer a:hover {
-    color: #ff5733; 
-}
-
-footer i.fa {
-    font-size: 50px;
+    color: #ff5733;
 }
 
