--- a/styles.css
+++ b/styles.css
@@ -94,3 +94,23 @@ footer a:hover {
     color: #ff5733;
 }
 
+
+.about {
+    display: inline-block;
+    padding: 10px 20px;
+    color: black;
+    text-decoration: none;
+    border-radius: 5px;
+    margin-top: 20px;
+    position: absolute;
+    top: 63%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 80%;
+}
+
+
+.whitecontainer {
+    text-align: center;
+}
+
