--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,8 @@ body, h1, h2, p, ul {
 
 body {
     position: relative;
+    min-width: 800px;
+    max-width: auto;
 }
 
 img {
@@ -114,7 +116,6 @@ footer a:hover {
 
 .skills {
     display: inline-block;
-    padding: 10px 20px;
     color: black;
     text-decoration: none;
     border-radius: 5px;
@@ -124,6 +125,8 @@ footer a:hover {
     left: 50%;
     transform: translate(-50%, -50%);
     width: 80%;
+
+    text-align: center;
 }
 
 
@@ -139,13 +142,16 @@ footer a:hover {
     background-image: linear-gradient(120deg, #02C5DB 0%, #002159 100%);
   }
   .progress-width.html{
-    width:80%;
+    width:90%;
   }
   .progress-width.css{
-    width:65%;
+    width:70%;
   }
   .progress-width.js{
     width:50%;
+  }
+  .progress-width.node{
+    width:80%;
   }
   
   .skills-container {
@@ -154,8 +160,45 @@ footer a:hover {
       grid-gap: 10px;
   }
   
+
+  /* Portfolio Section Styles */
+.profolio-container {
+    padding: 0;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    width: 80%;
+    position: absolute;
+    top: 72%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.project {
+    margin-bottom: 4px;
+    border: 1px solid #ddd;
+    padding: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    flex: 1;
+}
+
+.project img {
+    width: 100%;
+    height: auto;
+    border-radius: 8px;
+    margin-bottom: 1px;
+}
+
+.project h4 {
+    font-size: 1.5em;
+}
+
+.project p {
+    color: #666;
+    font-size: 1em;
+}
+
+
+
   
   
-    
-    
-    
