--- a/styles.css
+++ b/styles.css
@@ -7,8 +7,6 @@ body, h1, h2, p, ul {
 
 body {
     position: relative;
-    min-width: 800px;
-    max-width: auto;
 }
 
 img {
@@ -68,15 +66,26 @@ header :hover {
     color:#ff5733
 }
 
-.blinking-cursor {
-    display: none;
-    position: absolute;
-    top: 0;
-    left: 10px;
+.about {
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 20px;
 }
 
+.about h2 {
+    color: #333;
+    font-size: 2em;
+    margin-bottom: 20px;
+}
+
+.about p {
+    color: #000000;
+    line-height: 1.6;
+}
+
+
 footer {
-    padding: 15px;
+    padding: 5px 0;
     text-align: center;
 }
 
@@ -92,44 +101,11 @@ footer a:hover {
 }
 
 
-.about {
-    display: inline-block;
-    padding: 10px 20px;
-    color: black;
-    text-decoration: none;
-    border-radius: 5px;
-    margin-top: 20px;
-    position: absolute;
-    top: 41%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 80%;
-}
-
-.whitecontainer {
-    text-align: center;
-}
-
-.whitecontainerdown img {
-    transform: scaleX(-1) scaleY(-1);
-}
-
 .skills {
-    display: inline-block;
-    color: black;
-    text-decoration: none;
-    border-radius: 5px;
-    margin-top: 20px;
-    position: absolute;
-    top: 55%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 80%;
-
-    text-align: center;
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 20px;
 }
-
-
 
 .skill-progress{
     border:1px solid #0c0a0a;
@@ -150,8 +126,8 @@ footer a:hover {
   .progress-width.js{
     width:50%;
   }
-  .progress-width.node{
-    width:80%;
+ .progress-width.node{
+    width:50%;
   }
   
   .skills-container {
@@ -159,41 +135,3 @@ footer a:hover {
       grid-template-columns: repeat(auto-fill, minmax(100px, 1fr)); 
       grid-gap: 10px;
   }
-  
-
-  /* Portfolio Section Styles */
-.profolio-container {
-    padding: 0;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    width: 80%;
-    position: absolute;
-    top: 72%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
-.project {
-    margin-bottom: 4px;
-    border: 1px solid #ddd;
-    padding: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    flex: 1;
-}
-
-.project img {
-    width: 100%;
-    height: auto;
-    border-radius: 8px;
-    margin-bottom: 1px;
-}
-
-.project h4 {
-    font-size: 1.5em;
-}
-
-.project p {
-    color: #666;
-    font-size: 1em;
-}
