--- a/styles.css
+++ b/styles.css
@@ -81,6 +81,7 @@ header :hover {
 .about p {
     color: #000000;
     line-height: 1.6;
+    margin-bottom: 15px;
 }
 
 
@@ -104,7 +105,8 @@ footer a:hover {
 .skills {
     max-width: 800px;
     margin: 0 auto;
-    padding: 20px;
+    padding-bottom: 40px;
+    text-align: center;
 }
 
 .skill-progress{
@@ -115,7 +117,7 @@ footer a:hover {
   .progress-width{
     padding:4px;
     border-radius:10px;
-    background-image: linear-gradient(120deg, #02C5DB 0%, #002159 100%);
+    background-image: linear-gradient(120deg, #02c5db 0%, #002159 100%);
   }
   .progress-width.html{
     width:90%;
