--- a/views/skill.hbs
+++ b/views/skill.hbs
@@ -41,6 +41,7 @@
     });
   </script>
 
+
 </head>
 
 <body>
@@ -58,34 +59,60 @@
         <p><span id="holder"></span><span class="blinking-cursor">|</span></p>
     </header>
     
-    
-        <div class="about">
-            <h2>About Me</h2>
-            <p>Web developer dedicated to crafting user-friendly and 
-            efficient websites. With proficiency in both front-end and back-end technologies, my mission is to translate clients' needs 
-            into impactful digital solutions. I thrive on staying at the forefront of industry trends and best practices to ensure the 
-            websites I build are not only contemporary but also highly functional.</p>
-            <p>Let's Build Together
-            I am excited about the prospect of contributing my skills to collaborative projects that push the boundaries of web 
-            development. If you are looking for a developer who is not just adept but also committed to delivering excellence,
-            let's connect and explore the possibilities.
-            Thank you for visiting my portfolio. Let's embark on a journey of creating web solutions that stand out!
-            </p>
-        </div>
 
-    
-        <div class="resume">
-            <a href="https://your-resume-url.pdf" title="Download my resume" target="_blank">
-                <i class="far fa-file-pdf"></i> Download my resume
-            </a>
+    <section class="skills">
+     <div class ="skills-container">
+        <div class="skillschart">
+                      <div class="skill-name">HTML5</div>
+                      <div class="skill-progress">
+                        <div class="progress-width html"></div>
+                      </div>
+                    </div>
+        
+        
+        <div class="skillschart">
+                      <div class="skill-name">CSS3</div>
+                      <div class="skill-progress">
+                        <div class="progress-width css"></div>
+                      </div>
+                    </div>
+        
+        <div class="skillschart">
+                      <div class="skill-name">Javascript</div>
+                      <div class="skill-progress">
+                        <div class="progress-width js"></div>
+                      </div>
         </div>
+                    
+        
+        <div class="skillschart">
+                      <div class="skill-name">Node.js</div>
+                      <div class="skill-progress">
+                        <div class="progress-width css"></div>
+                      </div>
+                    </div>
+        
+        <div class="skillschart">
+                      <div class="skill-name">CSS</div>
+                      <div class="skill-progress">
+                        <div class="progress-width css"></div>
+                      </div>
+                    </div>
+        
+        <div class="skillschart">
+                      <div class="skill-name">CSS</div>
+                      <div class="skill-progress">
+                        <div class="progress-width css"></div>
+                      </div>
+                    </div>
+          </div>  
+    </section>
+        
 
         <footer>
             <a href="https://www.linkedin.com/in/jonathanbijl/" target="_blank"><i class="fab fa-linkedin"></i></a>
             <a href="https://github.com/Bijl1" target="_blank"><i class="fab fa-github"></i></a>
         </footer>
-    
-    
 </body>
 
 </html>
