--- a/views/index.hbs
+++ b/views/index.hbs
@@ -81,9 +81,11 @@
         </div>
 
         <footer>
-            <a href="https://www.linkedin.com/in/jonathanbijl/" target="_blank"><i class="fab fa-linkedin"></i></a>
-            <a href="https://github.com/Bijl1" target="_blank"><i class="fab fa-github"></i></a>
-        </footer>
+          <a href="mailto:jonathanabijl@gmail.com" title="Email me"><i class="far fa-envelope"></i></a>
+          <a href="https://www.linkedin.com/in/jonathanbijl/" target="_blank" rel="noopener noreferrer" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
+          <a href="https://github.com/Bijl1" target="_blank" rel="noopener noreferrer" title="GitHub"><i class="fab fa-github"></i></a>
+          </footer>
+
     
     
 </body>
