--- a/views/index.hbs
+++ b/views/index.hbs
@@ -45,7 +45,7 @@
 
 <body>
    <header>
-        <img src="https://static.pexels.com/photos/5412/water-blue-ocean.jpg" alt="Tech Picture">
+        <img src="/images/JonathanBijlProfile.jpeg" alt="Profile Picture">
         <nav>
             <ul>
                 <li><a href="/">HOME</a></li>
