--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,113 +1,97 @@
-@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css');
-
-body, h1, h2, p, ul {
-    margin: 0;
-    padding: 0;
-}
-
 body {
-    position: relative;
-    background: linear-gradient(to right, #4e54c8, #8f94fb);
+    background-color: #f4f4f4;
+    color: #333;
+    margin: 0;
 }
 
-img {
-    display: block;
-    width: 30%;
-    height: auto;
-    border-radius: 50%;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-    position: absolute;
-    top: 150px;
-    right: 100px;
-}
 
 header {
-    position: relative;
+    background-color: #333;
+    color: #fff;
+    text-align:center;
+    padding-top: 60px;
+    position:relative;
+}
+
+header img {
+    border-radius: 50%;
+    max-width: 200px;
 }
 
 nav {
-    position: absolute;
-    top: 20px;
-    right: 20px;
+    background-color: #333;
+    position: fixed;
+    top: 0;
+    right: 0;
+    z-index: 1000;
 }
 
 nav ul {
     list-style: none;
-    display: flex;
+    padding: 0;
 }
 
 nav li {
-    margin-right: 15px;
+    display: inline-block;
+    margin-right: 20px;
 }
 
 nav a {
     text-decoration: none;
-    color: white;
+    color: #fff;
+    font-weight: bold;
+    font-size:18px;
 }
 
 h1 {
     color: white;
-    font-size: 3em;
-    letter-spacing: 0.15em;
-    width: 50%;
-    position: absolute;
-    top: 200px;
-    left: 75px;
+    padding-bottom: 20px;
 }
 
-header:hover h1 {
-    color: #ff5733;
-}
-
-#holder {
-    position: absolute;
-    top: 400px;
-    left: 30%;
-    transform: translate(-50%, -50%);
-    color: white;
-}
-
-#holder:hover {
-    color: #ff5733;
+h1 a:hover {
+    background-color: #ff5733;
 }
 
 .about {
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 20px;
-    position: fixed;
-    bottom: 150px;
-    width: 100%;
-
-    text-align: center;
-    
-    
-}
-
-.about h2 {
     color: #333;
-    font-size: 2em;
-    margin-bottom: 20px;
+    text-align: justify;
+    margin: 60px;
 }
 
-.about p {
-    color: #000000;
-    line-height: 1.6;
-    margin-bottom: 15px;
-    width: 100%;
+.resume {
     text-align: center;
+    margin: 30px 0;
+}
+
+.resume a {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #333;
+    color: #fff;
+    text-decoration: none;
+    font-weight: bold;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+}
+
+.resume a i {
+    font-size: 24px;
+    margin-right: 10px;
+}
+
+.resume a:hover {
+    background-color: #ff5733;
 }
 
 footer {
+    background-color: #333;
     padding: 5px 0;
-    position: fixed;
     width: 100%;
-    bottom: 0;
     text-align: center;
 }
 
 footer a {
-    color: black;
+    color: white;
     text-decoration: none;
     margin: 0 10px;
     font-size: 24px;
@@ -116,7 +100,6 @@ footer a {
 footer a:hover {
     color: #ff5733;
 }
-
 
 .skills {
     max-width: 800px;
@@ -154,32 +137,4 @@ footer a:hover {
       grid-gap: 10px;
   }
 
-
-  .resume {
-    text-align: center;
-    margin-top: 20px;
-    position: fixed;
-    width: 100%;
-    bottom: 50px;
-}
-
-.resume a {
-    display: inline-block;
-    padding: 10px 20px;
-    background-color: black;
-    color: #fff;
-    text-decoration: none;
-    font-weight: bold;
-    border-radius: 5px;
-    transition: background-color 0.3s ease;
-}
-
-.resume a i {
-    font-size: 24px;
-    margin-right: 10px;
-}
-
-.resume a:hover {
-    background-color: #ff5733;
-}
 
